# claude-desktop-mcp

./: .gitignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yaml
hack/: run.sh
src/claude_desktop_mcp/: __init__.py  __main__.py  catalog.py  config.py  middleware.py  observability.py  search.py  server.py
tests/: test_catalog.py  test_modes.py  test_observability.py  test_search.py
tools/: README.md  go.mod  go.sum
