# Copyright 2026 Deavon M. McCaffery
# SPDX-License-Identifier: Apache-2.0

[project]
name = "claude-desktop-mcp"
version = "0.1.0"
description = "Fake MCP server with 101+ tools and an AgentCore-style semantic search tool, for validating Claude Desktop's handling of large toolsets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Deavon M. McCaffery", email = "dmccaffery@users.noreply.github.com" }
]
keywords = ["agentcore", "claude", "claude-desktop", "mcp", "tool-search"]
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
claude-desktop-mcp = "claude_desktop_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_desktop_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
